unpackaged/main/default/objects/Process__c/Process__c.object-meta.xml
<CustomObject>
    <label>Process</label>
    <nameField>
        <displayFormat>PRO-{000000}</displayFormat>
        <label>Process Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Processes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>