unpackaged/main/default/objects/Process__c/fields/Add_Additional_Medications_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Add_Additional_Medications_if_applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Additional Medications if applicable</label>
    <type>Checkbox</type>
</CustomField>