unpackaged/main/default/objects/Process__c/fields/Blood_Test_Results_Reviewed_by_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Blood_Test_Results_Reviewed_by_Doctor__c</fullName>
    <label>Blood Test Results Reviewed by Doctor?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>