unpackaged/main/default/objects/Process__c/fields/Check_Allergies__c.field-meta.xml
<CustomField>
    <fullName>Check_Allergies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Allergies</label>
    <type>Checkbox</type>
</CustomField>