unpackaged/main/default/objects/Process__c/fields/Check_Consultation_Form_Added__c.field-meta.xml
<CustomField>
    <fullName>Check_Consultation_Form_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Consultation Form Added</label>
    <type>Checkbox</type>
</CustomField>