unpackaged/main/default/objects/Process__c/fields/Check_Patient_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Check_Patient_Agreement_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Patient Agreement Signed</label>
    <type>Checkbox</type>
</CustomField>