unpackaged/main/default/objects/Process__c/fields/Confirm_Signed_Up__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Signed_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Signed Up</label>
    <type>Checkbox</type>
</CustomField>