unpackaged/main/default/objects/Process__c/fields/Doctor_Follow_Up_Consultation_Booked__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Follow_Up_Consultation_Booked__c</fullName>
    <label>Doctor Follow Up Consultation Booked?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>