unpackaged/main/default/objects/Process__c/fields/Doctor_s_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Doctor_s_Recommendations__c</fullName>
    <label>Doctor&#39;s Recommendations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>