unpackaged/main/default/objects/Process__c/fields/Does_Patient_have_2_Blood_Test_results__c.field-meta.xml
<CustomField>
    <fullName>Does_Patient_have_2_Blood_Test_results__c</fullName>
    <label>Does Patient have 2 Blood Test results?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>