unpackaged/main/default/objects/Process__c/fields/Does_Patient_have_High_LH__c.field-meta.xml
<CustomField>
    <fullName>Does_Patient_have_High_LH__c</fullName>
    <label>Does Patient have High LH?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>