unpackaged/main/default/objects/Process__c/fields/Does_Patient_have_Low_T_Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Does_Patient_have_Low_T_Symptoms__c</fullName>
    <label>Does Patient have Low T symptoms?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>