unpackaged/main/default/objects/Process__c/fields/Does_Patient_have_Low_TT_or_FT__c.field-meta.xml
<CustomField>
    <fullName>Does_Patient_have_Low_TT_or_FT__c</fullName>
    <label>Does Patient have Low TT or FT?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, has blood test results</fullName>
            </value>
            <value>
                <fullName>No, needs to order blood test</fullName>
            </value>
            <value>
                <fullName>No, not eligible for treatment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>