unpackaged/main/default/objects/Process__c/fields/Full_Blood_Test_Results__c.field-meta.xml
<CustomField>
    <fullName>Full_Blood_Test_Results__c</fullName>
    <label>Full Blood Test Results?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, full set</fullName>
            </value>
            <value>
                <fullName>No, full set ordered</fullName>
            </value>
            <value>
                <fullName>No, needs to order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>