unpackaged/main/default/objects/Process__c/fields/Further_Investigations_Required__c.field-meta.xml
<CustomField>
    <fullName>Further_Investigations_Required__c</fullName>
    <label>Further Investigations Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>