unpackaged/main/default/objects/Process__c/fields/GP_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>GP_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has a GP letter been sent, if required?</description>
    <inlineHelpText>Has a GP letter been sent, if required? (check &#39;Is GP letter required?&#39; field)</inlineHelpText>
    <label>GP Letter Sent</label>
    <type>Checkbox</type>
</CustomField>