unpackaged/main/default/objects/Process__c/fields/Is_GP_Letter_required__c.field-meta.xml
<CustomField>
    <fullName>Is_GP_Letter_required__c</fullName>
    <label>Is GP Letter required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>