unpackaged/main/default/objects/Process__c/fields/Off_Label_Medication_PILs_sent__c.field-meta.xml
<CustomField>
    <fullName>Off_Label_Medication_PILs_sent__c</fullName>
    <description>If Off-Label Medications have been prescribed, have PILs been sent to the patient?</description>
    <inlineHelpText>If Off-Label Medications have been prescribed, have PILs been sent to the patient?</inlineHelpText>
    <label>Off-Label Medication PILs sent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>