unpackaged/main/default/objects/Process__c/fields/Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Status__c</fullName>
    <label>Onboarding Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Approval</fullName>
                <default>true</default>
                <label>Pre-Approval</label>
            </value>
            <value>
                <fullName>Approved for Consultation</fullName>
            </value>
            <value>
                <fullName>Consultation</fullName>
            </value>
            <value>
                <fullName>Post-Consultation</fullName>
            </value>
            <value>
                <fullName>Subscription Sign Up</fullName>
            </value>
            <value>
                <fullName>Order Medication</fullName>
            </value>
            <value>
                <fullName>Onboarding Complete</fullName>
            </value>
            <value>
                <fullName>Follow Up Due</fullName>
            </value>
            <value>
                <fullName>Follow Up Complete</fullName>
            </value>
            <value>
                <fullName>Ineligible / Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>