unpackaged/main/default/objects/Process__c/fields/Patient_Aged_over_40__c.field-meta.xml
<CustomField>
    <fullName>Patient_Aged_over_40__c</fullName>
    <label>Patient aged over 40?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>