unpackaged/main/default/objects/Process__c/fields/Patient_Issue_Symptoms_Identified__c.field-meta.xml
<CustomField>
    <fullName>Patient_Issue_Symptoms_Identified__c</fullName>
    <inlineHelpText>Outline any issues or symptoms identified</inlineHelpText>
    <label>Patient Issue/Symptoms Identified</label>
    <type>TextArea</type>
</CustomField>