unpackaged/main/default/objects/Process__c/fields/Place_Injection_Supplies_Order__c.field-meta.xml
<CustomField>
    <fullName>Place_Injection_Supplies_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Place Injection Supplies Order</label>
    <type>Checkbox</type>
</CustomField>