unpackaged/main/default/objects/Process__c/fields/Place_Medication_Order__c.field-meta.xml
<CustomField>
    <fullName>Place_Medication_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Place Medication Order</label>
    <type>Checkbox</type>
</CustomField>