unpackaged/main/default/objects/Process__c/fields/Received_Blood_Test_Results__c.field-meta.xml
<CustomField>
    <fullName>Received_Blood_Test_Results__c</fullName>
    <label>Received Blood Test Results?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>