unpackaged/main/default/objects/Process__c/fields/Review_Medications_on_Consultation_Form__c.field-meta.xml
<CustomField>
    <fullName>Review_Medications_on_Consultation_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Review Medications on Consultation Form</label>
    <type>Checkbox</type>
</CustomField>