unpackaged/main/default/objects/Process__c/fields/S1_Notes__c.field-meta.xml
<CustomField>
    <fullName>S1_Notes__c</fullName>
    <label>S1 Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>