unpackaged/main/default/objects/Process__c/fields/S2_Notes__c.field-meta.xml
<CustomField>
    <fullName>S2_Notes__c</fullName>
    <label>S2 Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>