unpackaged/main/default/objects/Process__c/fields/S3_Notes__c.field-meta.xml
<CustomField>
    <fullName>S3_Notes__c</fullName>
    <label>S3 Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>