unpackaged/main/default/objects/Process__c/fields/Send_Calendly_Consultation_Times__c.field-meta.xml
<CustomField>
    <fullName>Send_Calendly_Consultation_Times__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Calendly Consultation Times</label>
    <type>Checkbox</type>
</CustomField>