unpackaged/main/default/objects/Process__c/fields/Send_Email_with_Sign_Up_links__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_with_Sign_Up_links__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email with Sign Up links</label>
    <type>Checkbox</type>
</CustomField>