unpackaged/main/default/objects/Process__c/fields/Send_Patient_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Send_Patient_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Patient Agreement</label>
    <type>Checkbox</type>
</CustomField>