unpackaged/main/default/objects/Process__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of process</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
                <default>true</default>
                <label>Onboarding</label>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>