unpackaged/main/default/objects/Process__c/fields/Upload_ID__c.field-meta.xml
<CustomField>
    <fullName>Upload_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload ID</label>
    <type>Checkbox</type>
</CustomField>