unpackaged/main/default/objects/Process__c/fields/Upload_Medical_History__c.field-meta.xml
<CustomField>
    <fullName>Upload_Medical_History__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload Medical History</label>
    <type>Checkbox</type>
</CustomField>