unpackaged/main/default/objects/Process__c/listViews/Onboarding_Process.listView-meta.xml
<ListView>
    <fullName>Onboarding_Process</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>Onboarding Process</label>
</ListView>